--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZWxlZ2FudC1mb3gtNjEuY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_API_BASE_URL = https://kriyaflow.onrender.com
